// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal-Dialog Matches snapshot (closed) 1`] = `
<body
  class=""
  style="overflow: unset;"
>
  <div />
  <div
    class="ReactModalPortal"
  />
</body>
`;

exports[`Modal-Dialog Matches snapshot (custom button labels) 1`] = `
<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  .c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c6:not(:disabled) {
  cursor: pointer;
}

.c6 > svg {
  color: inherit;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c6:hover {
  background-color: #005F7A;
  border-color: #005F7A;
}

.c6:disabled,
.c6:disabled:focus,
.c6:disabled:hover {
  background-color: #99CCDB;
  border-color: #99CCDB;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c8:not(:disabled) {
  cursor: pointer;
}

.c8 > svg {
  color: inherit;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c8:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c8:disabled,
.c8:disabled:focus,
.c8:disabled:hover {
  background-color: transparent;
  color: #9CA7B4;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
  padding: 0;
  width: 32px;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c9:not(:disabled) {
  cursor: pointer;
}

.c9 > svg {
  color: inherit;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c9:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c9:disabled {
  background-color: transparent;
  color: #9CA7B4;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  overflow-y: auto;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
  position: relative;
  width: 60vw;
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c0:focus {
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c1 {
  margin-bottom: var(--spacing-3x);
}

.c10 {
  position: absolute;
  right: var(--spacing-1x);
  top: var(--spacing-1x);
}

.c4 {
  margin-top: var(--spacing-4x);
}

.c2 {
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin: 0;
}

.c2:focus {
  outline: none;
}

.c3 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.375rem;
  margin: 0;
  margin-top: var(--spacing-3x);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
}

.c7 {
  margin-bottom: 0;
  margin-right: var(--spacing-1x);
}

<div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open c0"
        role="dialog"
        tabindex="-1"
      >
        <header
          class="c1"
        >
          <h2
            class="c2"
            tabindex="-1"
          >
            Title
          </h2>
          <h3
            class="c3"
          >
            Subtitle
          </h3>
        </header>
        <p
          id="modal-description"
        >
          Test Content
        </p>
        <footer
          class="c4"
        >
          <div
            class="c5"
          >
            <button
              class="c6 c7"
              data-testid="confirm-button"
              type="submit"
            >
              Test Confirm
            </button>
            <button
              class="c8 "
              data-testid="cancel-button"
              type="submit"
            >
              Test Cancel
            </button>
          </div>
        </footer>
        <button
          aria-label="Close dialog"
          class="c9 c10"
          data-testid="close-button"
          type="button"
        >
          <svg
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal-Dialog Matches snapshot (not titles) 1`] = `
<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  .c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c3:not(:disabled) {
  cursor: pointer;
}

.c3 > svg {
  color: inherit;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c3:hover {
  background-color: #005F7A;
  border-color: #005F7A;
}

.c3:disabled,
.c3:disabled:focus,
.c3:disabled:hover {
  background-color: #99CCDB;
  border-color: #99CCDB;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c5:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c5:disabled,
.c5:disabled:focus,
.c5:disabled:hover {
  background-color: transparent;
  color: #9CA7B4;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
  padding: 0;
  width: 32px;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c6:not(:disabled) {
  cursor: pointer;
}

.c6 > svg {
  color: inherit;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c6:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c6:disabled {
  background-color: transparent;
  color: #9CA7B4;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  overflow-y: auto;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
  position: relative;
  width: 60vw;
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c0:focus {
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c7 {
  position: absolute;
  right: var(--spacing-1x);
  top: var(--spacing-1x);
}

.c1 {
  margin-top: var(--spacing-4x);
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
}

.c4 {
  margin-bottom: 0;
  margin-right: var(--spacing-1x);
}

<div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-label="Test modal"
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open c0"
        role="dialog"
        tabindex="-1"
      >
        <p
          id="modal-description"
        >
          Test Content
        </p>
        <footer
          class="c1"
        >
          <div
            class="c2"
          >
            <button
              class="c3 c4"
              data-testid="confirm-button"
              type="submit"
            >
              Confirm
            </button>
            <button
              class="c5 "
              data-testid="cancel-button"
              type="submit"
            >
              Cancel
            </button>
          </div>
        </footer>
        <button
          aria-label="Close dialog"
          class="c6 c7"
          data-testid="close-button"
          type="button"
        >
          <svg
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal-Dialog Matches snapshot (only subtitle) 1`] = `
<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  .c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c5:hover {
  background-color: #005F7A;
  border-color: #005F7A;
}

.c5:disabled,
.c5:disabled:focus,
.c5:disabled:hover {
  background-color: #99CCDB;
  border-color: #99CCDB;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c7:not(:disabled) {
  cursor: pointer;
}

.c7 > svg {
  color: inherit;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c7:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c7:disabled,
.c7:disabled:focus,
.c7:disabled:hover {
  background-color: transparent;
  color: #9CA7B4;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
  padding: 0;
  width: 32px;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c8:not(:disabled) {
  cursor: pointer;
}

.c8 > svg {
  color: inherit;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c8:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c8:disabled {
  background-color: transparent;
  color: #9CA7B4;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  overflow-y: auto;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
  position: relative;
  width: 60vw;
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c0:focus {
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c1 {
  margin-bottom: var(--spacing-3x);
}

.c9 {
  position: absolute;
  right: var(--spacing-1x);
  top: var(--spacing-1x);
}

.c3 {
  margin-top: var(--spacing-4x);
}

.c2 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.375rem;
  margin: 0;
  margin-top: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
}

.c6 {
  margin-bottom: 0;
  margin-right: var(--spacing-1x);
}

<div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-label="Test modal"
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open c0"
        role="dialog"
        tabindex="-1"
      >
        <header
          class="c1"
        >
          <h3
            class="c2"
          >
            Subtitle
          </h3>
        </header>
        <p
          id="modal-description"
        >
          Test Content
        </p>
        <footer
          class="c3"
        >
          <div
            class="c4"
          >
            <button
              class="c5 c6"
              data-testid="confirm-button"
              type="submit"
            >
              Confirm
            </button>
            <button
              class="c7 "
              data-testid="cancel-button"
              type="submit"
            >
              Cancel
            </button>
          </div>
        </footer>
        <button
          aria-label="Close dialog"
          class="c8 c9"
          data-testid="close-button"
          type="button"
        >
          <svg
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal-Dialog Matches snapshot (only title) 1`] = `
<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  .c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c5:hover {
  background-color: #005F7A;
  border-color: #005F7A;
}

.c5:disabled,
.c5:disabled:focus,
.c5:disabled:hover {
  background-color: #99CCDB;
  border-color: #99CCDB;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c7:not(:disabled) {
  cursor: pointer;
}

.c7 > svg {
  color: inherit;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c7:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c7:disabled,
.c7:disabled:focus,
.c7:disabled:hover {
  background-color: transparent;
  color: #9CA7B4;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
  padding: 0;
  width: 32px;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c8:not(:disabled) {
  cursor: pointer;
}

.c8 > svg {
  color: inherit;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c8:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c8:disabled {
  background-color: transparent;
  color: #9CA7B4;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  overflow-y: auto;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
  position: relative;
  width: 60vw;
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c0:focus {
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c1 {
  margin-bottom: var(--spacing-3x);
}

.c9 {
  position: absolute;
  right: var(--spacing-1x);
  top: var(--spacing-1x);
}

.c3 {
  margin-top: var(--spacing-4x);
}

.c2 {
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin: 0;
}

.c2:focus {
  outline: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
}

.c6 {
  margin-bottom: 0;
  margin-right: var(--spacing-1x);
}

<div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open c0"
        role="dialog"
        tabindex="-1"
      >
        <header
          class="c1"
        >
          <h2
            class="c2"
            tabindex="-1"
          >
            Title
          </h2>
        </header>
        <p
          id="modal-description"
        >
          Test Content
        </p>
        <footer
          class="c3"
        >
          <div
            class="c4"
          >
            <button
              class="c5 c6"
              data-testid="confirm-button"
              type="submit"
            >
              Confirm
            </button>
            <button
              class="c7 "
              data-testid="cancel-button"
              type="submit"
            >
              Cancel
            </button>
          </div>
        </footer>
        <button
          aria-label="Close dialog"
          class="c8 c9"
          data-testid="close-button"
          type="button"
        >
          <svg
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal-Dialog Matches snapshot (opened, desktop) 1`] = `
.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c6:not(:disabled) {
  cursor: pointer;
}

.c6 > svg {
  color: inherit;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c6:hover {
  background-color: #005F7A;
  border-color: #005F7A;
}

.c6:disabled,
.c6:disabled:focus,
.c6:disabled:hover {
  background-color: #99CCDB;
  border-color: #99CCDB;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c8:not(:disabled) {
  cursor: pointer;
}

.c8 > svg {
  color: inherit;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c8:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c8:disabled,
.c8:disabled:focus,
.c8:disabled:hover {
  background-color: transparent;
  color: #9CA7B4;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  height: 32px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.4px;
  -moz-letter-spacing: 0.4px;
  -ms-letter-spacing: 0.4px;
  letter-spacing: 0.4px;
  line-height: 1rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
  padding: 0;
  width: 32px;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c9:not(:disabled) {
  cursor: pointer;
}

.c9 > svg {
  color: inherit;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c9:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c9:disabled {
  background-color: transparent;
  color: #9CA7B4;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: calc(480px - var(--spacing-4x));
  overflow-y: auto;
  padding: var(--spacing-4x) var(--spacing-4x) 0;
  position: relative;
  width: 60vw;
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-4x);
}

.c0:focus {
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c1 {
  margin-bottom: var(--spacing-3x);
}

.c10 {
  position: absolute;
  right: var(--spacing-1x);
  top: var(--spacing-1x);
}

.c4 {
  margin-top: var(--spacing-4x);
}

.c2 {
  font-size: 1.25rem;
  font-weight: var(--font-normal);
  line-height: 2rem;
  margin: 0;
}

.c2:focus {
  outline: none;
}

.c3 {
  font-size: 1rem;
  font-weight: var(--font-normal);
  line-height: 1.375rem;
  margin: 0;
  margin-top: var(--spacing-3x);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
}

.c7 {
  margin-bottom: 0;
  margin-right: var(--spacing-1x);
}

<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open c0"
        role="dialog"
        tabindex="-1"
      >
        <header
          class="c1"
        >
          <h2
            class="c2"
            tabindex="-1"
          >
            Title
          </h2>
          <h3
            class="c3"
          >
            Subtitle
          </h3>
        </header>
        <p
          id="modal-description"
        >
          Test Content
        </p>
        <footer
          class="c4"
        >
          <div
            class="c5"
          >
            <button
              class="c6 c7"
              data-testid="confirm-button"
              type="submit"
            >
              Confirm
            </button>
            <button
              class="c8 "
              data-testid="cancel-button"
              type="submit"
            >
              Cancel
            </button>
          </div>
        </footer>
        <button
          aria-label="Close dialog"
          class="c9 c10"
          data-testid="close-button"
          type="button"
        >
          <svg
            color="currentColor"
            focusable="false"
            height="16"
            width="16"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal-Dialog Matches snapshot (opened, mobile) 1`] = `
<body
  class="ReactModal__Body--open"
  style="overflow: hidden;"
>
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  <div />
  <div
    data-react-modal-body-trap=""
    style="position: absolute; opacity: 0;"
    tabindex="0"
  />
  .c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  height: 48px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.53px;
  -moz-letter-spacing: 0.53px;
  -ms-letter-spacing: 0.53px;
  letter-spacing: 0.53px;
  line-height: 1.5rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c6:not(:disabled) {
  cursor: pointer;
}

.c6 > svg {
  color: inherit;
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c6:hover {
  background-color: #005F7A;
  border-color: #005F7A;
}

.c6:disabled,
.c6:disabled:focus,
.c6:disabled:hover {
  background-color: #99CCDB;
  border-color: #99CCDB;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  height: 48px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.53px;
  -moz-letter-spacing: 0.53px;
  -ms-letter-spacing: 0.53px;
  letter-spacing: 0.53px;
  line-height: 1.5rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c8:not(:disabled) {
  cursor: pointer;
}

.c8 > svg {
  color: inherit;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c8:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c8:disabled,
.c8:disabled:focus,
.c8:disabled:hover {
  background-color: transparent;
  color: #9CA7B4;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: var(--font-bold);
  height: 48px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.53px;
  -moz-letter-spacing: 0.53px;
  -ms-letter-spacing: 0.53px;
  letter-spacing: 0.53px;
  line-height: 1.5rem;
  min-height: 2rem;
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-3x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border-color: transparent;
  color: #57666E;
  padding: 0;
  width: 48px;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c9:not(:disabled) {
  cursor: pointer;
}

.c9 > svg {
  color: inherit;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566;
}

.c9:hover {
  background-color: #D9DDE2;
  color: #000000;
}

.c9:disabled {
  background-color: transparent;
  color: #9CA7B4;
}

.c0 {
  background-color: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius-2x);
  box-shadow: 0 6px 10px 0 rgba(0,0,0,0.1);
  box-sizing: border-box;
  max-height: calc(100vh - var(--spacing-2x));
  max-width: 700px;
  min-width: initial;
  overflow-y: auto;
  padding: var(--spacing-6x) var(--spacing-2x) 0;
  position: relative;
  width: calc(100vw - var(--spacing-2x));
}

.c0::after {
  content: '';
  display: block;
  padding-bottom: var(--spacing-2x);
}

.c0:focus {
  border-color: #0080A5;
  box-shadow: 0 0 0 2px #0080A566,0 6px 10px 0 rgba(0,0,0,0.1);
  outline: none;
}

.c1 {
  margin-bottom: var(--spacing-3x);
}

.c10 {
  position: absolute;
  right: var(--spacing-half);
  top: var(--spacing-half);
}

.c4 {
  margin-top: var(--spacing-4x);
}

.c2 {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.25rem;
  margin: 0;
}

.c2:focus {
  outline: none;
}

.c3 {
  font-size: 1.125rem;
  font-weight: var(--font-normal);
  line-height: 1.75rem;
  margin: 0;
  margin-top: var(--spacing-3x);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c7 {
  margin-bottom: var(--spacing-1x);
  margin-right: 0;
}

<div
    class="ReactModalPortal"
  >
    <div
      class="ReactModal__Overlay ReactModal__Overlay--after-open"
      style="position: fixed; top: 0px; left: 0px; right: 0px; bottom: 0px; background-color: rgba(255, 255, 255, 0.75); align-items: center; display: flex; justify-content: center; z-index: 10000;"
    >
      <div
        aria-describedby="modal-description"
        aria-modal="true"
        class="ReactModal__Content ReactModal__Content--after-open c0"
        role="dialog"
        tabindex="-1"
      >
        <header
          class="c1"
        >
          <h2
            class="c2"
            tabindex="-1"
          >
            Title
          </h2>
          <h3
            class="c3"
          >
            Subtitle
          </h3>
        </header>
        <p
          id="modal-description"
        >
          Test Content
        </p>
        <footer
          class="c4"
        >
          <div
            class="c5"
          >
            <button
              class="c6 c7"
              data-testid="confirm-button"
              type="submit"
            >
              Confirm
            </button>
            <button
              class="c8 "
              data-testid="cancel-button"
              type="submit"
            >
              Cancel
            </button>
          </div>
        </footer>
        <button
          aria-label="Close dialog"
          class="c9 c10"
          data-testid="close-button"
          type="button"
        >
          <svg
            color="currentColor"
            focusable="false"
            height="20"
            width="20"
          />
        </button>
      </div>
    </div>
  </div>
</body>
`;
